tests/paczka1/small_fuzzy/96705806.err
Error in line 3: MXCHyum3 S323 492,4
Error in line 6: MXCHyum3 S160 38,9
Error in line 4: e3TjewnrX S683 50,2
Error in line 8: MXCHyum3 S323 60,1
